fix vertical align for list items in data download - fixes #864

--- a/web/css/dataDownload.css
+++ b/web/css/dataDownload.css
@@ -62,6 +62,7 @@
 
 #wv-data-selection td {
   border-bottom: 1px solid #404040;
+  vertical-align: middle;
   padding: 5px;
 }
 
